--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "socket.io": "^4.4.1"
   },
   "name": "project",
   "version": "1.0.0",
