--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "socketio-file-upload": "^0.7.3"
   },
   "name": "project",
   "version": "1.0.0",
   "type": "module",
   "main": "config.js",
   "scripts": {
-    "node": "node ./src/server.js",
+    "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js"
   },
   "repository": {
